syntax = "proto3";

package com.vincent.grpc;

option java_multiple_files = true;
option java_package = "com.vincent.grpc";
option java_outer_classname = "clientSideProto";

service CartService {
  // Client 流方式
  rpc AddToCart (stream ProductOrder) returns (AddCartReply) {}
}

message ProductOrder {
  int32 productId = 1;
  int32 number = 2;
}

message AddCartReply {
  int32 code = 1;
  string message = 2;
}

service StockService {
  // 雙向流方式
  rpc BatchDeduct (stream ProductOrder) returns (stream DeductReply) {}
}

message DeductReply {
  int32 code = 1;
  string message = 2;
}